<resources>
    <string name="app_name">6.Sınıf İngilizce</string>
    <string name="vocabulary">VOCABULARY</string>
    <string name="grammar">GRAMMAR</string>
    <color name="kara">#000000</color>
    <color name="byz">#ffffff</color>

    <string name="action_settings">Settings</string>

    <string name="text_to_change">NEXT</string>
    <string name="change_text">Click to change text</string>
    <string name="unitscr1">LIFE</string>
    <string name="unitscr2">YUMMY BREAKFAST</string>
    <string name="unitscr3">DOWNTOWN</string>
    <string name="unitscr4">WEATHER AND EMOTIONS</string>
    <string name="unitscr5">AT THE FAIR</string>
    <string name="unitscr6">VACATION</string>
    <string name="unitscr7">OCCUPATIONS</string>
    <string name="unitscr8">BOOKWORMS</string>
    <string name="unitscr9">SAVING THE PLANET</string>
    <string name="unitscr10">DEMOCRACY</string>
    <string name="gizlilik_poltitikası">Gizlilik Politikası \n\n EdeBtek, Hizmetlerimizi kullanan çocukların gizliliğini korumayı taahhüt etmektedir. \nİşbu Çocuklar İçin Çevrimiçi Gizlilik Politikası’nda 13 yaşından küçük çocuklar (‘çocuk’ veya ‘çocuklar’) tarafından sunulan bilgilerle ilgili olarak bilgi toplama, açıklama ve ebeveyn izni uygulamalarımızda açıklanmaktadır. Bu politika ABD Çocuklar İçin Çevrimiçi Gizliliği Koruma Kanunu’na (U.S. Children’s Online Privacy Protection Act (‘COPPA’)) uygundur. COPPA ve çocukların çevrimiçi gizliliği hakkında daha fazla bilgi için, lütfen Online sitesini ziyaret ediniz.\n\n Çocuklardan topladığımız bilgiler, bu bilgileri kullanma şeklimiz, ebeveynlerle nasıl ve ne zaman iletişime geçtiğimiz\n\n EdeBtek, kullanıcılarına bazıları öncelikle çocuklara yönelik olan, diğerleri ise her yaştaki kullanıcılar ve onların aileleri için tasarlanan bir dizi Hizmetler sunmaktadır. Hizmetlerimiz, çocuklardan bilgi toplayabilen aktiviteler dahil olmak üzere çeşitli aktiviteler sunar. Aşağıda olası bilgi toplama örnekleri özetlenmiş ve nasıl ve ne zaman ebeveynleri bilgilendireceğimiz ve/veya ebeveyn izni isteyeceğimiz hususları genel hatlarıyla belirtilmiştir. Bir çocuktan kişisel bilgiler topladığımız herhangi bir durumda, bu bilgileri yalnızca aktivite isteğini karşılamak ya da ya da çocuğun aktiviteye katılmasına imkan sağlamak için makul derecede gerekli olan ve kullanıcılarımızın veya hizmetlerimizin güvenliğini sağlayacak süreyle sınırlı olarak ya da kanunun gerektirdiği ölçüde elimizde tutacağız. Bir çocuktan COPPA gerekliliklerine uygun olmayan şekilde bilgi topladığımızı fark etmemiz halinde ya bu bilgileri sileceğiz ya da bu bilgi toplama işlemi için derhal ebeveynin iznini isteyeceğiz.\n\n Kayıt\n\n Çocuklar, çoğu durumda Hizmetlerimize,belli özelliklerle meşgul olmak için kaydolabilmektedirler. Kayıt prosedürü sırasında, çocuktan bilgilendirme ve güvenlik amaçlarıyla bir ebeveynin veya vasinin e-posta adresi, çocuğun adı, cinsiyeti, doğum günü ve e-posta gibi bazı bilgileri vermesini talep edebiliriz. Çocukların bilgilerini bizimle paylaşıp paylaşmayacaklarına kendilerinin karar verebileceğini ancak bazı özelliklerin bu bilgiler olmadan çalışmayacağını lütfen unutmayınız. Sonuç olarak, talep edilen bilgi sağlanmadığı takdirde çocuklar belli özelliklere erişemeyebilirler. Bir çocuktan, çevrimiçi bir aktiviteye katılmak için makul ölçüde gerekli olandan daha fazla bilgi vermesini talep etmeyeceğiz.\n\n Ebeveynin e-posta adresinin alınması hakkında: COPPA gerekliliklerine uygun olarak, çocukları hedef alan herhangi bir sitede veya uygulamada ya da yaş sorup kullanıcının 12 veya daha küçük yaşta olduğunu belirlediğimiz herhangi bir durumda, çocuktan herhangi bir kişisel bilgi almadan önce bir ebeveynin veya vasinin e-posta adresini talep edeceğiz. Çocuğunuzun kişisel bilgilerin toplandığı bir aktiviteye katıldığını düşünüyorsanız ve siz ya da başka bir ebeveyn/vasi, uyarıcı nitelikte veya izninizi isteyen bir e-posta ALMADIYSANIZ lütfen bizimle edebtek@gmail.com adresinden iletişime geçmekten çekinmeyiniz. Ebeveyn açıkça e-posta pazarlamasını tercih etmediği veya bu tür e-posta iletişimine izin veren bir aktiviteye ayrı olarak katılmadığı sürece ebeveyn izni için sunulan ebeveyn e-postaları ebeveyne pazarlama yapmak için kullanılmayacaktır.\n\n Doğrulanabilen Ebeveyn İzni Hakkında:\n\n E-postayla İzin Verme. EdeBtek’in bir çocuktan kişisel bilgi almayı istediği durumda, COPPA öncelikle e-postayla bir ebeveynin veya vasinin iznini almamızı zorunlu kılmaktadır. E-postada hangi bilgileri toplamakta olduğumuzu, bunları nasıl kullanmayı düşündüğümüzü, ebeveynin nasıl izin verebileceğini ve ebeveynin iznini nasıl geri alabileceğini açıklayacağız.\n\n Üst Düzey İzin. Edebtek’in bir çocuktan kamuya açık olarak yayınlanacak kişisel bilgiler toplaması durumunda, e-posta izninden daha üst düzeyde bir izin talep edeceğiz. Bu tür “üst düzey” izin yöntemleri, doğrulama için kredi kartı veya başka bir ödeme yöntemi (itibari bir ücretle birlikte) isteme, e-posta eki aracılığıyla imzalı bir izni zorunlu kılma dâhil olmak ancak bunlarla sınırlı olmamak üzere çeşitli yöntemleri içermektedir.\n\n Ebeveyn yerine öğretmen izni. COPPA, okul tabanlı aktivitelerle ilgili olarak, öğretmenlerin ve okul yöneticilerinin çocuklardan kişisel bilgiler toplanması için izin vermek üzere ebeveynlerin yerine hareket etmesine olanak tanır. Okullar her zaman ebeveynleri bu aktiviteler hakkında bilgilendirmelidir. Bir çocuğun Ailenin Eğitimle İlgili Hakları ve Gizlilik Kanunu (Family Educational Rights and Privacy Act (“FERPA”)) kapsamındaki eğitim kaydıyla ilgili olarak ebeveyn hakları hakkında daha fazla bilgi için lütfen sitesini ziyaret ediniz.\n\n Sürekli Tanımlayıcılar\n\n Çocuklar bizimle iletişime geçtiğinde, bazı bilgiler, hem Hizmetlerimizi çocuklar için daha ilginç ve yararlı hale getirmek için, hem de işimizle ilgili farklı nedenlerle otomatik olarak toplanabilmektedir. Buna örnek olarak; bilgisayarın işletim sistemi türü, çocuğun IP adresi veya mobil cihaz tanımlayıcısı, web tarayıcısı, çocuğun Hizmetlerimizin farklı kısımlarını ziyaret etme sıklığı, cocuğun coğrafi konumu ve çevrimiçi ya da cep telefonu hizmet sağlayıcısıyla ilgili bilgiler verilebilir. Bu bilgiler çerezler, flash çerezler, web işaretçileri ve diğer benzersiz tanımlayıcılar gibi teknolojiler kullanılarak toplanmaktadır. Bu bilgiler CogniFit veya bir üçüncü şahıs tarafından toplalanmaz. Bu veriler yalnızca dâhili amaçlarla ve aşağıdakileri gerçekleştirmek üzere kullanılır:\n\n Söz konusu bilgileri Hizmetlerimizde çocuklardan diğer amaçlarla topladığımız (veya başkalarının toplamasına izin verdiğimiz) durumda, ebeveynleri bilgilendireceğiz ve bu tür bilgi toplamadan önce ebeveynlerden izin alacağız.\n\n Operatörlerin gizlilik politikaları ile bilgi toplama ve kullanma uygulamalarıyla ilgili sorularınız için edebtek@gmail.com adresinden bizimle iletişime geçmekten lütfen çekinmeyiniz.\n\n Çocuklardan Alınan Bilgiler Başkalarına Sunulduğunda\n\n Eğer çocuk kişisel bilgilerini öğretmen, okul yöneticisi, sağlık görevlisi veya araştırmacıyla paylaşıyorsa ebeveyn ya da vasi, çocuğun gizlilik ayarlarını düzenleyebilir\n\n Varsayılan olarak, çocuğun kişisel bilgileri kamuya açık olarak yayınlanmaz. Bir çocuğun kişisel bilgilerinin kamuya açık olarak yayınlandığı nadir durumlara ek olarak , çocuklardan alınan kişisel bilgileri, aşağıdaki durumlar da dâhil olmak üzere sınırlı sayıda durumda paylaşabilir veya açıklayabiliriz:\n\n Kişisel bilgileri, kanunlar tarafından izin verilirse veya zorunlu kılınırsa, örneğin bir mahkeme emri ya da celbine yanıt olarak, ifşa edebiliriz. Yürürlükteki kanunların izin verdiği ölçüde, çocuklardan alınan bilgileri (i) bir kolluk veya kamu kurumunun (okullar ve çocuk hizmetleri dâhil) isteğine yanıt olarak; (ii) açıklamanın bir suça teşviki önleyebileceğine, kamu güvenliğiyle ilgili bir soruşturmayı kolaylaştırabileceğine ya da site ve uygulamalarımızı kullanan bir çocuğun güvenliğini koruyabileceğine inanmamız halinde; (iii) site, uygulama ve diğer teknolojilerimizin güvenliğinin yanı sıra hizmet sağlayıcılarımızın teknolojilerini korumak amacıyla ya da (iv) sorumluluklara karşı önlemler almamızı sağlamak amacıyla da açıklayabiliriz.\n\n Ebeveyn Tercihleri ve Denetimleri Ebeveynler istedikleri zaman özel bir hesapla ilişkili olarak, çocuklarından başka kişisel bilgiler toplanmasına izin vermeyi reddedebilir ve söz konusu hesapla bağlantılı olarak topladığımız kayıtlarımızdaki kişisel bilgileri silmemizi talep edebilir. Kayıtların silinmesine yönelik bir talebin, hesabın, üyeliğin ya da başka hizmetin sonlandırılmasına yol açabileceğini lütfen unutmayınız.</string>

</resources>
