<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unitbck"
    tools:context=".Unitscr">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:elevation="0dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="6dp">




        <Button
            android:id="@+id/button1"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:onClick="unit"
            android:backgroundTint="#3f51b5"
            android:text="@string/unitscr1"
            android:textSize="20sp"
            android:textStyle="italic" />


        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:backgroundTint="#2196f3"
            android:onClick="unit"
            android:text="@string/unitscr2"
            android:textSize="20sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button3"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:backgroundTint="#0288d1"
            android:onClick="unit"
            android:text="@string/unitscr3"
            android:textSize="20sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:backgroundTint="#0097a7"
            android:onClick="unit"
            android:text="@string/unitscr4"
            android:textSize="20sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:backgroundTint="#009688"
            android:onClick="unit"
            android:text="@string/unitscr5"
            android:textSize="20sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:backgroundTint="#4caf50"
            android:onClick="unit"
            android:text="@string/unitscr6"
            android:textSize="20sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:backgroundTint="#7b1fa2"
            android:onClick="unit"
            android:text="@string/unitscr7"
            android:textSize="20sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:backgroundTint="#c2185b"
            android:onClick="unit"
            android:text="@string/unitscr8"
            android:textSize="20sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/button10"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:backgroundTint="#d32f2f"
            android:onClick="unit"
            android:text="@string/unitscr9"
            android:textSize="20sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:backgroundTint="#e64a19"
            android:text="@string/unitscr10"
            android:onClick="unit"
            android:textSize="20sp"
            android:textStyle="italic"/>




    </LinearLayout>


</ScrollView>
